# pydebrid

./: README.md  pyproject.toml
src/pydebrid/: cli.py  client.py  models.py  progress.py  utils.py
