[project]
name = "pydebrid"
version = "0.1.0"
description = "cli for real debrid"
authors = [
    {name = "Kyle AuBuchon", email = "kdaub.tf2@gmail.com"},
]
dependencies = [
    "rich>=13.7.1",
    "aiofiles>=23.2.1",
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "pydantic>=2.6.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
pyrd = "pydebrid.cli:app"

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true
