[project]
name = "pydebrid"
version = "0.1.0"
description = "cli for real debrid"
authors = [
    {name = "Kyle AuBuchon", email = "kdaub.tf2@gmail.com"},
]
dependencies = [
    "rich>=13.7.1",
    "aiofiles>=23.2.1",
    "httpx[http2]>=0.28.1",
    "typer>=0.9.0",
    "pydantic>=2.6.4",
    "click==7.*",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
pyrd = "pydebrid.cli:app"

[project.optional-dependencies]
dev = [
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true
